// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A suite renders HTML tree correctly 1`] = `
<Header>
  <div>
    Backend/Frontend boilerplate without DB
  </div>
</Header>
`;

exports[`A suite renders components tree correctly 1`] = `
<Header>
  <div>
    Backend/Frontend boilerplate without DB
  </div>
</Header>
`;

exports[`A suite renders correctly 1`] = `
<div>
  Backend/Frontend boilerplate without DB
</div>
`;

exports[`A suite renders isolated component correctly 1`] = `
<div>
  Backend/Frontend boilerplate without DB
</div>
`;
